<resources>
    <string name="app_name">commerce</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="home"></string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="address">address</string>
    <string name="Phonenumber">phone number</string>
    <string name="country">country</string>
    <string name="expand">more</string>
    <string name="collapse">hide</string>
    <string name="add_favr">add to your favourite</string>
    <string name="remove_favr">remove from your favourite</string>
    <string name="no_favorites_items">no favourite</string>






    <string name="qty_prompt">quantities</string>
    <string-array name="qty">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>
